<resources>
    <string name="app_name">Material App Diler</string>

    <string name="mainActivityTitle">APP Carros</string>
    <string name="mainActivitySubTitle">dilerdesenvolv</string>

    <string name="action_facebook">Facebook</string>
    <string name="action_youtube">Youtube</string>
    <string name="action_google_plus">Google Plus</string>
    <string name="action_linkedin">Linked In</string>
    <string name="action_settings">Configurações</string>
    <string name="action_whatsapp">WhatsApp</string>
    <string name="agendar_test_drive">Agendar Test Drive</string>
    <string name="assunto">Assunto</string>
    <string name="buscar_carros">buscar carros</string>
    <string name="carregando">Carregando...</string>
    <string name="carros_app">Carros APP</string>
    <string name="carros_dluxo">Carros de Luxo</string>
    <string name="carros_eport">Carros Esportivos</string>
    <string name="carros_pcolecion">Carros para Colecionadores</string>
    <string name="carros_popular">Carros Populares</string>
    <string name="campo_obrigatorio">Campo Obrigatório</string>
    <string name="chamadan_perm">Chamada não permitida</string>
    <string name="COLECIONADOR">COLECIONADOR</string>
    <string name="compartilhar_link">Compartilhar Link</string>
    <string name="conectar">Conectar</string>
    <string name="descartar">Descartar</string>
    <string name="email">Email</string>
    <string name="email_enviado_sucesso">Email enviado com sucesso</string>
    <string name="empresa_vendas">Empresa Vendas</string>
    <string name="entre_em_contato">Entre em contato</string>
    <string name="enviar">Enviar</string>
    <string name="falhou_tente_nova">Falhou. Tente novamente.</string>
    <string name="favorito">Favorito</string>
    <string name="hello_world">Ola mundo</string>
    <string name="historico_exc">Histórico excluído</string>
    <string name="ligar">Ligar</string>
    <string name="link_web">Link Web</string>
    <string name="limpar_historico">Limpar histórico</string>
    <string name="LUXO">LUXO</string>
    <string name="mensagem_de_contato">Mensagem de contato</string>
    <string name="nao_tenho_gplus">Não tenho Google Plus</string>
    <string name="nenhum_result">Nenhum resultado encontrado</string>
    <string name="news">News</string>
    <string name="notificacoes">Notificações</string>
    <string name="outra_tela">Outra tela</string>
    <string name="POPULAR">POPULAR</string>
    <string name="sem_conexao_verifique">Sem conexão com a Internet. Por favor, verifique seu Wifi ou Móvel.</string>
    <string name="somente_entre_9h_18h">Somente entre 9h e 18h</string>
    <string name="SPORT">SPORT</string>
    <string name="telefone">Telefone</string>
    <string name="telefone_empresa">Telefone Empresa</string>
    <string name="title_activity_car">Carro</string>
    <string name="title_activity_second">Essa aqui</string>
    <string name="title_activity_transition">TransitionActivity</string>
    <string name="TODOS">TODOS</string>
    <string name="TODOS_OS_CARROS">TODOS OS CARROS</string>
    <string name="veja_isso">Veja isso</string>
    <string name="voltar">Voltar</string>
    <string name="OK">OK</string>
    <string name="telefone_9">(41) 9693.2688</string>
</resources>
