<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:icon="@drawable/ic_facebook"
        android:id="@+id/action_facebook"
        android:orderInCategory="100"
        android:title="@string/action_facebook"
        app:showAsAction="always" />
    <item
        android:icon="@drawable/ic_youtube"
        android:id="@+id/action_youtube"
        android:orderInCategory="100"
        android:title="@string/action_youtube"
        app:showAsAction="always" />
    <item
        android:icon="@drawable/ic_google_plus"
        android:id="@+id/action_google_plus"
        android:orderInCategory="100"
        android:title="@string/action_google_plus"
        app:showAsAction="always" />
    <item
        android:icon="@drawable/ic_linkedin"
        android:id="@+id/action_linkedin"
        android:orderInCategory="100"
        android:title="@string/action_linkedin"
        app:showAsAction="always" />
    <item
        android:icon="@drawable/ic_whatsapp"
        android:id="@+id/action_whatsapp"
        android:orderInCategory="100"
        android:title="@string/action_whatsapp"
        app:showAsAction="always" />
</menu>
