<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_searchable_activity"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        android:title="@string/buscar_carros"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_second_activity"
        android:orderInCategory="100"
        android:title="@string/outra_tela"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_transition_activity"
        android:orderInCategory="100"
        android:title="@string/title_activity_transition"
        app:showAsAction="never" />

</menu>
